# pl241-compiler

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md
program_output/: Notes.txt  test001.out  test003.out  test004.out  test007.out  test010.out  test011.out  test013.out  test015.out  test016.out
programs/: array_bug.txt  codegen_reg_spill_bug.txt  codegen_while_test.txt  cse_load_test.txt  cse_test.txt  func_if_test.txt  func_test024.txt  func_while_test.txt  global_test.txt  ig_bug.txt  nested_if_test.txt  nested_if_while_test.txt  simple_array.txt  simple_input.txt  test001.txt  test004.txt  test004_zero_based.txt  test006.txt  test008.txt  test010.txt  test011.txt  test014.txt  test015.txt  test016.txt  test020_bounds_fix.txt
report/: half_time_report.md  half_time_report.txt
src/: CMakeLists.txt  cs241c.cpp
src/codegen/: CMakeLists.txt  DLXGen.cpp  DLXGen.h
src/frontend/: CMakeLists.txt  IrGenContext.cpp  IrGenContext.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/frontend/ast/: Computation.cpp  Computation.h  Decl.cpp  Decl.h  Expr.cpp  Expr.h  Stmt.cpp  Stmt.h
src/ir/: BasicBlock.cpp  BasicBlock.h  BasicBlockTerminator.h  CMakeLists.txt  CommonSubexElimPass.cpp  CommonSubexElimPass.h  ConstExprEvalPass.cpp  ConstExprEvalPass.h  DeadCodeEliminationPass.cpp  DeadCodeEliminationPass.h  DominatorTree.cpp  DominatorTree.h  Function.cpp  Function.h  FunctionAnalyzer.cpp  FunctionAnalyzer.h  Global2LocalPass.cpp  Global2LocalPass.h  GlobalVariable.cpp  GlobalVariable.h  Instruction.cpp  Instruction.h  InstructionType.cpp  InstructionType.h  IntegrityCheckPass.cpp  IntegrityCheckPass.h  InterferenceGraph.cpp  InterferenceGraph.h  IrGenContext.cpp  IrGenContext.h  KillPass.cpp  KillPass.h  Mem2VarPass.cpp  Mem2VarPass.h  Module.cpp  Module.h  ParamPass.cpp  ParamPass.h  Pass.h  Phi2VarPass.cpp  (+18 more)
src/util/: CMakeLists.txt  Filesystem.cpp  Filesystem.h  NameGen.cpp  NameGen.h
src/vcg/: CMakeLists.txt  Vcg.cpp  Vcg.h  VcgGen.cpp  VcgGen.h  VcgVisitor.cpp  VcgVisitor.h
test/: CMakeLists.txt  DLXVM.cpp  DLXVM.h  RunTestPrograms.cpp  TestDomTreeGen.cpp  TestVcgGen.cpp
test/scripts/: show_cfg.sh
tools/: DLX.java  old.dlxa  out.txt
